Changes for supporting lightmaps in Trapchitect.

--- a/WaveEngine.TiledMap/Projects/WaveEngineUWP.TiledMap.project.json
+++ b/WaveEngine.TiledMap/Projects/WaveEngineUWP.TiledMap.project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "WaveEngine.Common": "2.3.0.29",
+    "WaveEngine.Components": "2.3.0.29",
+    "WaveEngine.Framework": "2.3.0.29"
   },
   "frameworks": {
     "uap10.0": {}
