--- a/WaveEngine.TiledMap/Projects/WaveEngine.TiledMap.csproj
+++ b/WaveEngine.TiledMap/Projects/WaveEngine.TiledMap.csproj
@@ -10,12 +10,13 @@
     <RootNamespace>WaveEngine.TiledMap</RootNamespace>
     <AssemblyName>WaveEngine.TiledMap</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <StyleCopTreatErrorsAsWarnings>true</StyleCopTreatErrorsAsWarnings>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -47,6 +48,36 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;WINDOWS</DefineConstants>
+    <DocumentationFile>bin\Windows\Debug\WaveEngine.TiledMap.XML</DocumentationFile>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <DocumentationFile>bin\Windows\Release\WaveEngine.TiledMap.XML</DocumentationFile>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'NuGet|x86'">
+    <OutputPath>bin\x86\NuGet\</OutputPath>
+    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <DocumentationFile>bin\Windows\Release\WaveEngine.TiledMap.XML</DocumentationFile>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,29 +88,31 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="TiledSharp">
-      <HintPath>..\..\..\Libraries\TiledSharp.dll</HintPath>
+      <HintPath>..\..\Libraries\uap10.0\TiledSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="WaveEngine.Box2D, Version=2.3.0.29, Culture=neutral, PublicKeyToken=6e72eaf7d6c3c55b, processorArchitecture=MSIL">
+      <HintPath>packages\WaveEngine.Box2D.2.3.0.29\lib\net45\WaveEngine.Box2D.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WaveEngine.Common, Version=2.3.0.29, Culture=neutral, PublicKeyToken=6e72eaf7d6c3c55b, processorArchitecture=MSIL">
+      <HintPath>packages\WaveEngine.Common.2.3.0.29\lib\net45\WaveEngine.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WaveEngine.Components, Version=2.3.0.29, Culture=neutral, PublicKeyToken=6e72eaf7d6c3c55b, processorArchitecture=MSIL">
+      <HintPath>packages\WaveEngine.Components.2.3.0.29\lib\net45\WaveEngine.Components.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WaveEngine.Framework, Version=2.3.0.29, Culture=neutral, PublicKeyToken=6e72eaf7d6c3c55b, processorArchitecture=MSIL">
+      <HintPath>packages\WaveEngine.Framework.2.3.0.29\lib\net45\WaveEngine.Framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WaveEngine.Materials, Version=2.3.0.29, Culture=neutral, PublicKeyToken=6e72eaf7d6c3c55b, processorArchitecture=MSIL">
+      <HintPath>packages\WaveEngine.Materials.2.3.0.29\lib\net45\WaveEngine.Materials.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Zlib.Portable">
-      <HintPath>..\..\..\Libraries\Zlib.Portable.dll</HintPath>
+      <HintPath>..\..\Libraries\uap10.0\Zlib.Portable.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Common\Projects\WaveEngine.Common.csproj">
-      <Project>{55B6B4F4-BCE2-4EF7-836F-44F17332F924}</Project>
-      <Name>WaveEngine.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Components\Projects\WaveEngine.Components.csproj">
-      <Project>{d32883f0-e199-48f7-bafb-ddc036ceb556}</Project>
-      <Name>WaveEngine.Components</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Framework\Projects\WaveEngine.Framework.csproj">
-      <Project>{75527125-5AA8-45D0-A801-F674EE689E78}</Project>
-      <Name>WaveEngine.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Materials\Projects\WaveEngine.Materials.csproj">
-      <Project>{97D4CEF4-07B4-4F5E-8C47-4972D45D2456}</Project>
-      <Name>WaveEngine.Materials</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfoExt.cs">
@@ -89,8 +122,16 @@
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="..\Shared\WaveEngine.TiledMap.Shared.projitems" Label="Shared" Condition="Exists('..\Shared\WaveEngine.TiledMap.Shared.projitems')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\..\Resources\StyleCop\StyleCop.Targets" />
-  <Import Project="..\..\..\Resources\PostBuildTargets\Windows.targets" />
+  <Import Project="packages\WaveEngine.Box2D.2.3.0.29\build\Mono\WaveEngine.Box2D.targets" Condition="Exists('packages\WaveEngine.Box2D.2.3.0.29\build\Mono\WaveEngine.Box2D.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\WaveEngine.Box2D.2.3.0.29\build\Mono\WaveEngine.Box2D.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\WaveEngine.Box2D.2.3.0.29\build\Mono\WaveEngine.Box2D.targets'))" />
+  </Target>
 </Project>
