--- a/WaveEngine.TiledMap/Projects/WaveEngineUWP.TiledMap.csproj
+++ b/WaveEngine.TiledMap/Projects/WaveEngineUWP.TiledMap.csproj
@@ -16,7 +16,6 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <StyleCopTreatErrorsAsWarnings>true</StyleCopTreatErrorsAsWarnings>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,6 +47,32 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>WaveEngineKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;NETFX_CORE;WINDOWS_UAP; UWP</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\UAP\AnyCPU\Debug\WaveEngine.TiledMap.XML</DocumentationFile>
+    <NoStdLib>true</NoStdLib>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UAP;UWP</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\UAP\AnyCPU\Release\WaveEngine.TiledMap.XML</DocumentationFile>
+    <Optimize>true</Optimize>
+    <NoStdLib>true</NoStdLib>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfoExt.cs" />
@@ -57,38 +82,19 @@
     <None Include="WaveEngineUWP.TiledMap.project.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Common\Projects\WaveEngineUWP.Common.csproj">
-      <Project>{97d63324-2a19-4f8e-8990-68bff8cc3b8f}</Project>
-      <Name>WaveEngineUWP.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Components\Projects\WaveEngineUWP.Components.csproj">
-      <Project>{2eb2a744-6554-4120-b705-429d322178a7}</Project>
-      <Name>WaveEngineUWP.Components</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Framework\Projects\WaveEngineUWP.Framework.csproj">
-      <Project>{fb59f167-39c2-475d-8eb5-7ff9d4fad7de}</Project>
-      <Name>WaveEngineUWP.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\WaveEngine.Materials\Projects\WaveEngineUWP.Materials.csproj">
-      <Project>{058585b4-daec-4dd0-9db4-6be6d9d8a644}</Project>
-      <Name>WaveEngineUWP.Materials</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="TiledSharp">
-      <HintPath>..\..\..\Libraries\TiledSharp.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Properties\WaveEngine.TiledMap.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="TiledSharp, Version=0.10.5890.28363, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Libraries\uap10.0\TiledSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="..\Shared\WaveEngine.TiledMap.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <Import Project="..\..\..\Resources\StyleCop\StyleCop.Targets" />
-  <Import Project="..\..\..\Resources\PostBuildTargets\UWP.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.TiledMap.targets.
   <Target Name="BeforeBuild">
